[package]
name = "condeform"
authors = ["Matt Bedell <matt@bedell.co>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.19", features = ["derive"] }
etcetera = "0.4.0"
toml = "0.5.9"
serde = { version = "1.0.147", features = ["derive"] }
dialoguer = { version = "0.10.2", features = ["fuzzy-select"] }
console = "0.15.2"
anyhow = "1.0"
thiserror = "1.0"
